modif publish action

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,10 +11,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install mdbook and mdbook-katex
-        uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: mdbook mdbook-katex
+        run: cargo install mdbook mdbook-katex
 
       - name: Build html
         run: mdbook build
