--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install mdbook and mdbook-katex
-        run: cargo install mdbook mdbook-katex
+        run: cargo install mdbook mdbook-katex mdbook-toc mdbook-bib
 
       - name: Build html
         run: mdbook build
