--- a/book.toml
+++ b/book.toml
@@ -7,6 +7,7 @@ title = "mdbook test"
 
 [output.html]
 no-section-label = true
+additional-js = ["mermaid.min.js", "mermaid-init.js"]
 
 [output.html.fold]
 enable = true
@@ -24,3 +25,6 @@ after = ["links"]
 macros = "src/macros.txt"
 block-delimiter = {left = "\\[", right = "\\]"}
 trust = true
+
+[preprocessor.mermaid]
+command = "mdbook-mermaid"
