--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,6 +12,8 @@ jobs:
 
       - name: Install mdbook, mdbook-katex, mdbook-toc, mdbook-mermaid
         run: cargo install mdbook mdbook-katex mdbook-toc mdbook-mermaid
+
+      - name: Install mdbook-mermaid
         run: mdbook-mermaid install .
 
       - name: Build html
