--- a/book.toml
+++ b/book.toml
@@ -7,7 +7,8 @@ title = "mdbook test"
 
 [output.html]
 no-section-label = true
-additional-js = ["mermaid.min.js", "mermaid-init.js"]
+additional-css = ["./assets/custom.css"]
+additional-js = ["./assets/mermaid.min.js", "./assets/mermaid-init.js"]
 
 [output.html.fold]
 enable = true
